crates/sui-adapter-transactional-tests/tests/shared/by_value_shared_object_deletion_via_move_call.exp
processed 11 tasks

task 1 'publish'. lines 6-35:
Error: error[E03002]: unbound module
  ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpU8RiVl:8:9
  │
8 │     use sui::sui::SUI;
  │         ^^^^^^^^ Invalid 'use'. Unbound module: 'sui::sui'

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpU8RiVl:14:50
   │
14 │         transfer::public_share_object(coin::zero<BFC>(ctx))
   │                                                  ^^^ Unbound type 'BFC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/tmp.Dus9QocTdb/.tmpU8RiVl:25:36
   │
25 │     public fun share_coin(o2: Coin<BFC>) {
   │                                    ^^^ Unbound type 'BFC' in current scope



task 2 'run'. lines 37-37:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'run'. lines 39-39:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 4 'view-object'. lines 41-41:
Error: task 4, lines 41-41. Unbound fake id 2,0

task 5 'view-object'. lines 43-45:
Error: task 5, lines 43-43. Unbound fake id 3,0

task 6 'programmable'. lines 46-48:
Error: INVALID TEST. Unknown object, object(2,0)

task 7 'run'. lines 50-50:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 8 'view-object'. lines 52-54:
Error: task 8, lines 52-52. Unbound fake id 7,0

task 9 'programmable'. lines 55-61:
Error: INVALID TEST. Unknown object, object(7,0)

task 10 'programmable'. lines 62-66:
Error: INVALID TEST. Unknown object, object(7,0)
